--- a/Project_1_E-Guru (HTML & CSS Only)/01.E_Guru.html
+++ b/Project_1_E-Guru (HTML & CSS Only)/01.E_Guru.html
@@ -7,57 +7,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="02.E_Guru.css">
-    <title>Question-1</title>
+    <title>E_Guru (Web_page)</title>
 </head>
 <body>
-    <!-- Main Container Start -->
-    <div class="container">
-        <!-- Nav bar start -->
-        <nav class="navbar flex">
-            <div class="logo flex">
-                <img src="./Assets/logo.png" alt="logo">
-                <span>E GURU</span>
-            </div>
-            <div class="link flex">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Features</li>
-                <li>How it works</li>
-            </div>
-            <div class="button">
-                <span>Sign Up</span>
-            </div>
-        </nav>
-        <!-- Nav bar end -->
+    <header>
+        <!-- container-1 Start -->
+        <div class="container-1">
+            <!-- Nav bar start -->
+            <nav class="navbar flex">
+                <div class="burger-menu">
+                    <img src="./Assets/menu-icon.png" alt="burger-menu">
+                </div>
+                <div class="logo flex">
+                    <img src="./Assets/logo.png" alt="logo">
+                    <span>E GURU</span>
+                </div>
+                <div class="link flex">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Features</li>
+                    <li>How it works</li>
+                </div>
+                <div class="button">
+                    <span>Sign Up</span>
+                </div>
+                <div class="profile-img">
+                    <img src="./assets/user-profile.png" alt="user-profile" />
+                </div>
+            </nav>
+            <!-- Nav bar end -->
+        </div>
+        <!-- container-1 End -->
+    </header>
 
-        <!-- Content part start -->
-        <div class="content flex">
-            <div class="left-content">
-                <div class="content-heading">
-                    <h1>STUDY FROM</h1>
-                    <h1>HOME WITH EXPERT</h1>
+    <main>
+        <!-- container-2 start -->
+        <div class="container-2"> 
+            <!-- content part start -->
+            <div class="content">
+                <div class="left-content">
+                        <h1>STUDY FROM</br>HOME WITH EXPERT</h1>
+                        <h3>A learning system based on formalised teaching with the help of resources.</h3>
                 </div>
-                <div class="content-center">
-                    <h4>A learning system based on formalised teaching with the help of resources.</h4>
+
+                <div class="right-content">
+                    <img class="background" src="./Assets/main-image-bg.png" alt="background">
+                    <img class="pattern" src="./Assets/main-image-pattern.png" alt="pattern">
+                    <img class="boy" src="./Assets/main-image.png" alt="boy">
+                    <img class="green-arrow" src="./Assets/green-arrow.png" alt="green-arrow">
+                    <img class="orange-arrow" src="./Assets/orange-arrow.png" alt="orange-arrow">
+                    <img class="circle" src="./Assets/circle.png" alt="circle">
                 </div>
+
                 <div class="content-button flex">
                     <div class="button-1">Get Started</div>
                     <div class="button-2">Learn More</div>
                     <img class="curve-arrow" src="./Assets/curve-arrow.png" alt="curve-arrow">
                 </div>
             </div>
-
-            <div class="right-content">
-                <img class="background" src="./Assets/main-image-bg.png" alt="background">
-                <img class="pattern" src="./Assets/main-image-pattern.png" alt="pattern">
-                <img class="boy" src="./Assets/main-image.png" alt="boy">
-                <img class="green-arrow" src="./Assets/green-arrow.png" alt="green-arrow">
-                <img class="orange-arrow" src="./Assets/orange-arrow.png" alt="orange-arrow">
-                <img class="circle" src="./Assets/circle.png" alt="circle">
-            </div>
+            <!-- Content part end -->
         </div>
-        <!-- Content part end -->
-    </div>
-    <!-- Main Container End -->
+        <!-- container-2 end -->
+    </main>
+
+    <footer>
+        <!-- container-3 start -->
+        <div class="container-3"> 
+            <!-- service-box start -->
+            <div class="service-box flex">
+                <div class="col col-1">
+                    <h1>WHY WE ARE </br>THE BEST</h1>
+                    <p>a learning system based on formalised teaching with help of....</p>
+                </div>
+                <div class="col col-2">
+                    <img src="./Assets/vector3.png" alt="EXPERT TEACHER">
+                    <h2>EXPERT TEACHER</h2>
+                    <span>a learning system based on formalised teaching</span>
+                </div>
+                <div class="col col-3">
+                    <img src="./Assets/vector2.png" alt="ONLINE COURSES">
+                    <h2>ONLINE COURSES</h2>
+                    <span>a learning system based on formalised teaching</span>
+                </div>
+                <div class="col col-4">
+                    <img src="./Assets/vector1.png" alt="24/7 SUPPORT">
+                    <h2>24/7 SUPPORT</h2>
+                    <span>a learning system based on formalised teaching</span>
+                </div>
+            </div>
+            <!-- service-box end -->
+        </div>    
+        <!-- container-3 start -->
+    </footer>
+    
 </body>
 </html>
