Updating Projects folder

--- a/Project_2_Hospital_Landing_page/01.Hospital_Webpage.html
+++ b/Project_2_Hospital_Landing_page/01.Hospital_Webpage.html
@@ -1,3 +1,5 @@
+<!-- Project-2 : Creating a Hospital_webpage_page of with the help of HTML and CSS only -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +8,8 @@
     <link rel="shortcut icon" href="/PW Skill Work/Image/AK Logo edit.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="02.Hospital Website.css">
-    <title>Hospital (Web_page)</title>
+    <link rel="stylesheet" href="02.Hospital_Webpage.css">
+    <title>Hospital_Web_page</title>
 </head>
 <body>
     <!-- head part start -->
