--- a/Project_1_E-Guru_webpage/01.E_Guru.html
+++ b/Project_1_E-Guru_webpage/01.E_Guru.html
@@ -1,3 +1,5 @@
+<!-- Project-1 : Creating a E_Guru_webpage_page of with the help of HTML and CSS only -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="02.E_Guru.css">
-    <title>E_Guru (Web_page)</title>
+    <link rel="stylesheet" href="03.Responsive.css">
+    <title>E_Guru_Web_page</title>
 </head>
 <body>
     <header>
